--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "live-server public/",
+    "build": "webpack",
+    "build-babel": "babel src/app.js --out-file public/scripts/app.js --presets=env,react --watch"
   },
   "author": "Lucas Alves",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "live-server": "^1.2.1",
+    "webpack": "^5.17.0"
   },
   "devDependencies": {
     "babel-plugin-syntax-optional-chaining": "^7.0.0-alpha.13",
