--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "live-server public/",
-    "build": "webpack",
+    "build": "webpack --watch",
     "build-babel": "babel src/app.js --out-file public/scripts/app.js --presets=env,react --watch"
   },
   "author": "Lucas Alves",
@@ -22,7 +22,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.1",
-    "webpack": "^5.17.0"
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0"
   },
   "devDependencies": {
     "babel-plugin-syntax-optional-chaining": "^7.0.0-alpha.13",
