--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "live-server public/",
     "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file public/scripts/app.js --presets=env,react --watch"
+    "dev-server": "webpack serve"
   },
   "author": "Lucas Alves",
   "license": "ISC",
@@ -17,17 +15,15 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "live-server": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "validator": "^13.5.2",
-    "webpack": "^5.17.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "babel-plugin-syntax-optional-chaining": "^7.0.0-alpha.13",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0"
   }
 }
