--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
     "validator": "^13.5.2",
     "webpack-dev-server": "^3.11.2"
   },
